plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'cpen221.app'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.2'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'cpen.app'
  mainClass = 'cpen.app.Main'
}

javafx {
  version = '21.0.5'
  modules = ['javafx.controls', 'javafx.fxml']
}
run {
  doFirst {
    jvmArgs = [
      '--module-path', configurations.runtimeClasspath.asPath,
      '--add-modules', 'javafx.controls,javafx.fxml'
    ]
  }
}
run {
  doFirst {
    jvmArgs = [
      '--module-path', configurations.runtimeClasspath.asPath,
      '--add-modules', 'javafx.controls,javafx.fxml'
    ]
  }
}

dependencies {
  implementation 'org.json:json:20210307'
  implementation "org.openjfx:javafx-controls:21.0.5"
  implementation "org.openjfx:javafx-fxml:21.0.5"
  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
useJUnitPlatform()}

jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
  launcher {
    name = 'app'
  }
}

jlinkZip {
  group = 'distribution'
}

jar {
  manifest {
    attributes(
            'Main-Class': 'cpen.app.Main'
    )
  }
  from {
    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  }
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.test {
  enabled = false
}